--- a/08_simple_regression/simple_regression.Rmd
+++ b/08_simple_regression/simple_regression.Rmd
@@ -13,6 +13,21 @@ output:
 knitr::opts_chunk$set(eval = TRUE, results = FALSE, fig.show = "hide", message = FALSE)
 ```
 
+## Logistics
+
+This lab will occur remotely and in pairs (there may be one group of three). For those of you participating synchronously, you will find the Zoom room information on [Moodle](https://moodle.smith.edu/). I will assign you to a breakout room with your partner(s). 
+
+For those participating syncronously I will be available in the main Zoom room to answer questions. If you have a question or technical problem, click the "Ask for Help" button (it looks like a question mark) in the meeting controls, and I will be alerted to join your breakout room.  
+
+For those of you participating asynchronously, alert me to technical challengs over Slack DM, and I will get back to you as soon as possible. For questions about the content of the lab, please sign up for an office hour time block. 
+
+Each of you should be writing and running code, examining output, and answering the exercises throughout the lab. However, you only need to turn in one final lab report. To do so, whoever was *not* the main recorder last week should be the main recorder of answers in the lab document this week. It may be helpful to share your screen. 
+
+You all should also feel free to ask and answer questions amongst yourselves via Zoom if participating synchronously or via Slack if participating asynchronously. Please note at the end of the lab document who you consulted for help.
+
+
+## Getting Started
+
 The Human Freedom Index is a report that attempts to summarize the idea of "freedom"
 through a bunch of different variables for many countries around the globe.
 It serves as a rough objective measure for the relationships between the different
@@ -26,8 +41,6 @@ Your aim will be to summarize a few of the relationships within the data both
 graphically and numerically in order to find which variables can help tell a story
 about freedom.
 
-## Getting Started
-
 ### Load packages
 
 In this lab, you will explore and visualize the data using the **tidyverse** suite of 
@@ -38,6 +51,7 @@ Let's load the packages.
 ```{r load-packages, message=FALSE}
 library(tidyverse)
 library(openintro)
+library(statsr)
 ```
 
 ### Creating a reproducible lab report
@@ -68,7 +82,7 @@ hfi %>%
 ```
 
 Here, we set the `use` argument to "complete.obs" since there are some observations
-of NA.
+of NA and we don't want those to count towards the calculation of the correlation.
 
 ## Sum of squared residuals
 
@@ -92,11 +106,14 @@ Just as you've used the mean and standard deviation to summarize a single variab
 you can summarize the relationship between these two variables by finding the 
 line that best follows their association. Use the following interactive 
 function to select the line that you think does the best job of going through 
-the cloud of points.
+the cloud of points. Note, we first need to filter out missing values since `plot_ss` expects complete cases.
 
 ```{r plotss-expression-score, eval=FALSE}
-#this isn't working, wondering if we should just remove rows with NA
-plot_ss(x = pf_expression_control, y = pf_score, data = hfi)
+# library(tidyverse) ## make sure these are loaded locally
+# library(openintro)
+# library(statsr)
+hfi_nice = hfi %>% filter(!is.na(pf_score), !is.na(pf_expression_control))
+plot_ss(x = pf_expression_control, y = pf_score, data = hfi_nice)
 ```
 
 After running this command, you'll be prompted to click two points on the plot 
@@ -114,7 +131,7 @@ the sum of squared residuals. To visualize the squared residuals, you can rerun
 the plot command and add the argument `showSquares = TRUE`.
 
 ```{r plotss-expression-score-squares, eval=FALSE}
-plot_ss(x = pf_expression_control, y = pf_score, data = hfi, showSquares = TRUE)
+plot_ss(x = pf_expression_control, y = pf_score, data = hfi_nice, showSquares = TRUE)
 ```
 
 Note that the output from the `plot_ss` function provides you with the slope and
@@ -122,7 +139,7 @@ intercept of your line as well as the sum of squares.
 
 1.  Using `plot_ss`, choose a line that does a good job of minimizing the sum of
     squares. Run the function several times. What was the smallest sum of 
-    squares that you got? How does it compare to your neighbors?
+    squares that you got? How does it compare to your partner's?
 
 ## The linear model
 
@@ -138,7 +155,7 @@ m1 <- lm(pf_score ~ pf_expression_control, data = hfi)
 The first argument in the function `lm` is a formula that takes the form 
 `y ~ x`. Here it can be read that we want to make a linear model of 
 `pf_score` as a function of `pf_expression_control`. The second argument specifies
-that R should look in the `hfi` data frame to find the two variables.
+that R should look in the `hfi` data frame to find the two variables. Note `lm` can handle missing values, so we can use the full data set here.
 
 The output of `lm` is an object that contains all of the information we need 
 about the linear model that was just fit. We can access this information using 
@@ -178,7 +195,7 @@ Let's create a scatterplot with the least squares line for `m1` laid on top.
 ```{r reg-with-line}
 ggplot(data = hfi, aes(x = pf_expression_control, y = pf_score)) +
   geom_point() +
-  stat_smooth(method = "lm", se = FALSE)
+  geom_smooth(method = "lm", se = FALSE)
 ```
 
 Here, we are literally adding a layer on top of our plot. `geom_smooth` creates
@@ -202,7 +219,7 @@ To assess whether the linear model is reliable, we need to check for (1)
 linearity, (2) nearly normal residuals, and (3) constant variability.
 
 **Linearity**: You already checked if the relationship between `pf_score` and 
-`pf_expression_control' is linear using a scatterplot. We should also verify this
+`pf_expression_control` is linear using a scatterplot. We should also verify this
 condition with a plot of the residuals vs. fitted (predicted) values.
 
 ```{r residuals}
@@ -272,7 +289,20 @@ another name commonly used for normal probability plots.
 
 -   What's one freedom relationship you were most surprised about and why? Display
     the model diagnostics for the regression model analyzing this relationship.
+
+## Deliverables
+
+When you are finished editing your Markdown document click the "Knit" button and choose "Knit to HTML" in the top left corner of RStudio. This will run all of your code and create a formatted document of the output.  If you get an error, it means something in your Markdown file isn't right, either an error in code or some error in formatting. Call me into your breakout room, and we will troubleshoot.
+
+Submit your Markdown document and knitted file to [Moodle](https://moodle.smith.edu/) as:
+
+LastName-LastName-L-08.Rmd  (add a third last name if applicable)
+
+LastName-LastName-L-08.html
+
+*Due*: Monday, October 26th (beginning of class time, Eastern time)
+
     
 * * *
 
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a> and was adapted by Sara Stoudt.
