--- a/10_normal_distribution/normal_distribution.Rmd
+++ b/10_normal_distribution/normal_distribution.Rmd
@@ -13,13 +13,26 @@ output:
 knitr::opts_chunk$set(eval = TRUE, results = FALSE, fig.show = "hide", message = FALSE)
 ```
 
+## Logistics
+
+This lab will occur remotely and in pairs (there may be one group of three). For those of you participating synchronously, you will find the Zoom room information on [Moodle](https://moodle.smith.edu/). I will assign you to a breakout room with your partner(s). 
+
+For those participating syncronously I will be available in the main Zoom room to answer questions. If you have a question or technical problem, click the "Ask for Help" button (it looks like a question mark) in the meeting controls, and I will be alerted to join your breakout room.  
+
+For those of you participating asynchronously, alert me to technical challengs over Slack DM, and I will get back to you as soon as possible. For questions about the content of the lab, please sign up for an office hour time block. 
+
+Each of you should be writing and running code, examining output, and answering the exercises throughout the lab. However, you only need to turn in one final lab report. To do so, whoever was *not* the main recorder last week should be the main recorder of answers in the lab document this week. It may be helpful to share your screen. 
+
+You all should also feel free to ask and answer questions amongst yourselves via Zoom if participating synchronously or via Slack if participating asynchronously. Please note at the end of the lab document who you consulted for help.
+
+
+## Getting Started
+
 In this lab, you'll investigate the probability distribution that is most central
 to statistics: the normal distribution.  If you are confident that your data are 
 nearly normal, that opens the door to many powerful statistical methods.  Here 
 we'll use the graphical tools of R to assess the normality of our data and also 
 learn how to generate random numbers from a normal distribution.
-
-## Getting Started
 
 ### Load packages
 
@@ -30,6 +43,7 @@ Let's load the packages.
 ```{r load-packages, message=FALSE}
 library(tidyverse)
 library(openintro)
+library(ggformula)
 ```
 
 ### Creating a reproducible lab report
@@ -129,10 +143,10 @@ constructing a normal probability plot, also called a normal Q-Q plot for
 
 ```{r qq}
 ggplot(data = dairy_queen, aes(sample = cal_fat)) + 
-  geom_line(stat = "qq")
+  geom_qq() + stat_qqline(alpha = 0.7, color = "red", linetype = "dashed")
 ```
 
-This time, you can use the `geom_line()` layer, while specifying that you will 
+This time, you can use the `geom_qq()` layer, while specifying that you will 
 be creating a Q-Q plot with the `stat` argument. It's important to note that here,
 instead of using `x` instead `aes()`, you need to use `sample`.
 
@@ -142,7 +156,7 @@ y-axis values correspond to the quantiles of the original unstandardized sample
 data. However, even if we were to standardize the sample data values, the Q-Q
 plot would look identical. A data set that is nearly normal will result in a
 probability plot where the points closely follow a diagonal line.  Any deviations
-from normality leads to deviations of these points from that line.
+from normality leads to deviations of these points from that line.  `stat_qqline()` provides a guide line to help you assess whether points deviate from a line.
 
 The plot for Dairy Queen's calories from fat shows points that tend to follow the
 line but with some errant points towards the upper tail.  You're left with the same
@@ -247,7 +261,20 @@ theoretical probabilities will be.
     probability plot, is this variable left skewed, symmetric, or right skewed?  
     Use a histogram to confirm your findings.
 
+## Deliverables
+
+When you are finished editing your Markdown document click the "Knit" button and choose "Knit to HTML" in the top left corner of RStudio. This will run all of your code and create a formatted document of the output.  If you get an error, it means something in your Markdown file isn't right, either an error in code or some error in formatting. Call me into your breakout room, and we will troubleshoot.
+
+Submit your Markdown document and knitted file to [Moodle](https://moodle.smith.edu/) as:
+
+LastName-LastName-L-09.Rmd  (add a third last name if applicable)
+
+LastName-LastName-L-09.html
+
+*Due*: Monday, November 16th (beginning of class time, Eastern time)
+
+
 
 * * *
 
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a> and was adapted by Sara Stoudt.
