--- a/07_inf_for_categorical_data/inf_for_categorical_data.Rmd
+++ b/07_inf_for_categorical_data/inf_for_categorical_data.Rmd
@@ -124,25 +124,55 @@ proportion.
 
 ## How does the proportion affect the margin of error?
 
-The margin of error is half the width of a confidence interval. Imagine you've set out to survey 1000 people in the US on two questions: are you at least
-5 feet tall? and are you left-handed? Since both of these sample proportions were 
+The margin of error is half the width of a confidence interval. Imagine you've set out to survey 1000 people in the US on two questions:  are you left-handed? are you 62 years old or over? are you at least 5 feet tall? Since these sample proportions were 
 calculated from the same sample size, they should have the same margin of 
-error, right? Wrong! While the margin of error does change with sample size, 
+error, right? Actually, no! While the margin of error does change with sample size, 
 it is also affected by the true proportion.
 
-About [10% of the population](https://psyarxiv.com/5gjac/) are left-handed, and a [rough guess-timate](https://www2.census.gov/library/publications/2010/compendia/statab/130ed/tables/11s0205.pdf) of the US population greater than 5 feet tall is about 90%.
+About [10% of the population](https://psyarxiv.com/5gjac/) are left-handed. [Roughly 20%](https://www.census.gov/prod/cen2010/briefs/c2010br-03.pdf) of the US population is 62 years old or over. A [rough guess-timate](https://www2.census.gov/library/publications/2010/compendia/statab/130ed/tables/11s0205.pdf) of the proportion of the US population greater than 5 feet tall is about 90%. 
+
+Let's generate some data. We'll learn more about `rbinom` later, so it's not crucial that you understand each step in following chunk.
 
 ```{r}
-samp_handed =
-samp_height = 
-samp %>%
-  specify(response = climate_change_affects, success = "Yes") %>%
+samp_hand = ifelse(rbinom(1000, 1, prob = 0.1) == 1, "left","right")
+samp_age = ifelse(rbinom(1000, 1, prob = 0.2) == 1, "old", "younger")
+samp_height = ifelse(rbinom(1000, 1, prob = 0.9) == 1, "tall", "short")
+
+samp = data.frame(samp_hand, samp_age, samp_height)
+```
+
+Let's get some confidence intervals for this data.
+
+```{r}
+interval_hand = samp %>% 
+  specify(response = samp_hand, success = "left") %>%
   generate(reps = 1000, type = "bootstrap") %>%
   calculate(stat = "prop") %>%
   get_ci(level = 0.95)
+
+interval_age = samp %>% 
+  specify(response = samp_age, success = "old") %>%
+  generate(reps = 1000, type = "bootstrap") %>%
+  calculate(stat = "prop") %>%
+  get_ci(level = 0.95)
+
+interval_height = samp %>% 
+  specify(response = samp_height, success = "tall") %>%
+  generate(reps = 1000, type = "bootstrap") %>%
+  calculate(stat = "prop") %>%
+  get_ci(level = 0.95)
+
 ```
 
-Think back to the formula for the standard error: $SE = \sqrt{p(1-p)/n}$. This 
+Now we can compare margins of error.
+
+```{r}
+(interval_hand[2]-interval_hand[1])/2
+(interval_age[2]-interval_age[1])/2
+(interval_height[2]-interval_height[1])/2
+```
+
+But what if we want to more systematically compare the relationship between proportion and margin of error? At the end of the course we'll learn a formula for standard error: $SE = \sqrt{p(1-p)/n}$. This 
 is then used in the formula for the margin of error for a 95% confidence 
 interval: 
 $$
