--- a/07_inf_for_categorical_data/inf_for_categorical_data.Rmd
+++ b/07_inf_for_categorical_data/inf_for_categorical_data.Rmd
@@ -1,6 +1,5 @@
 ---
 title: "Inference for categorical data"
-runtime: shiny
 output:
   html_document:
     css: www/lab.css
@@ -214,60 +213,51 @@ ggplot(data = dd, aes(x = p, y = me)) +
     error vs. population proportion plot you constructed in your answer. For
     a given sample size, for which value of `p` is margin of error maximized?
 
-## Success-failure condition
-
-We have emphasized that you must always check conditions before making 
-inference. For inference on proportions, the sample proportion can be assumed 
-to be nearly normal if it is based upon a random sample of independent 
-observations and if both $np \geq 10$ and $n(1 - p) \geq 10$. This rule of 
-thumb is easy enough to follow, but it makes you wonder: what's so special 
-about the number 10?
-
-The short answer is: nothing. You could argue that you would be fine with 9 or 
-that you really should be using 11. What is the "best" value for such a rule of 
-thumb is, at least to some degree, arbitrary. However, when $np$ and $n(1-p)$ 
-reaches 10 the sampling distribution is sufficiently normal to use confidence 
-intervals and hypothesis tests that are based on that approximation.
+## How do $n$ and $p$ affect the sampling distribution?
 
 You can investigate the interplay between $n$ and $p$ and the shape of the 
-sampling distribution by using simulations. Play around with the following
-app to investigate how the shape, center, and spread of the distribution of
-$\hat{p}$ changes as $n$ and $p$ changes.
+sampling distribution by using simulations. The following function will help you
+investigate how the shape, center, and spread of the distribution of
+$\hat{p}$ changes as $n$ and $p$ changes. It is not crucial that you understand the innerworkings of the function. Just read the documentation (header in comments describing how to use the function) noting the inputs and outputs.
 
-```{r sf-app, echo=FALSE, eval=TRUE}
-inputPanel(
-  numericInput("n", label = "Sample size:", value = 300),
-  
-  sliderInput("p", label = "Population proportion:",
-              min = 0, max = 1, value = 0.1, step = 0.01),
-  
-  numericInput("x_min", label = "Min for x-axis:", value = 0, min = 0, max = 1),
-  numericInput("x_max", label = "Max for x-axis:", value = 1, min = 0, max = 1)
-)
+```{r}
+# Simulate sampling distribution given sample size and proportion
+# Inputs
+# n (sample size, integer)
+# p (proportion, number between 0 and 1)
+# Returns
+# plot of sampling distribution
 
-renderPlot({
+makePlot <- function(n, p) {
+
+  ## simulate data
   pp <- data.frame(p_hat = rep(0, 5000))
-  for(i in 1:5000){
-    samp <- sample(c(TRUE, FALSE), input$n, replace = TRUE, 
-                   prob = c(input$p, 1 - input$p))
-    pp$p_hat[i] <- sum(samp == TRUE) / input$n
+  for (i in 1:5000) {
+    samp <- sample(c(TRUE, FALSE), n,
+      replace = TRUE,
+      prob = c(p, 1 - p)
+    )
+    pp$p_hat[i] <- sum(samp == TRUE) / n
   }
   bw <- diff(range(pp$p_hat)) / 30
+
+  ## plot distribution
   ggplot(data = pp, aes(x = p_hat)) +
     geom_histogram(binwidth = bw) +
-    xlim(input$x_min, input$x_max) +
-    ggtitle(paste0("Distribution of p_hats, drawn from p = ", input$p, ", n = ", input$n))
-})
+    ggtitle(paste0("Distribution of p_hats, drawn from p = ", p, ", n = ", n))
+}
+
+
+makePlot(n = 300, p = 0.1)
 ```
 
 1.  Describe the sampling distribution of sample proportions at $n = 300$ and 
     $p = 0.1$. Be sure to note the center, spread, and shape.
 
-1.  Keep $n$ constant and change $p$. How does the shape, center, and spread 
-    of the sampling distribution vary as $p$ changes. You might want to adjust
-    min and max for the $x$-axis for a better view of the distribution.
+1.  Keep $n$ constant and change $p$ to three different values. How does the shape, center, and spread 
+    of the sampling distribution vary as $p$ changes. What happens if $p$ is very small?
     
-1.  Now also change $n$. How does $n$ appear to affect the distribution of $\hat{p}$?
+1.  Now for one of your choices of $p$ (not the extremely small one) also change $n$ to three different values. How does $n$ appear to affect the distribution of $\hat{p}$? What happens if $n$ is really small?
 
 * * *
 
