--- a/02_intro_to_data/intro_to_data.Rmd
+++ b/02_intro_to_data/intro_to_data.Rmd
@@ -63,6 +63,8 @@ reports for this lab, and all future labs:
 [**Basic R Markdown with an OpenIntro Lab**](https://www.youtube.com/watch?v=Pdc368lS2hk)
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Pdc368lS2hk" frameborder="0" allowfullscreen></iframe>
 
+**Note: This video was made using `oilabs`. We will NOT be using `oilabs`. Be sure to pick the Lab Report template that goes with `openintro` as shown in screenshot above. Make sure you have `library(openintro)` in your first chunk not `library(oilabs)`.**
+
 ### The data
 
 The [Bureau of Transportation Statistics](http://www.rita.dot.gov/bts/about/) 
@@ -395,24 +397,6 @@ ggplot(data = dl_aa_ua, aes(x = dep_delay, y = arr_delay, color = carrier)) +
 ```
 
 You may want to refer to the [ggplot cheatsheet](https://rstudio.com/wp-content/uploads/2016/11/ggplot2-cheatsheet-2.1.pdf) and the [dplyr cheatsheet](https://rstudio.com/wp-content/uploads/2015/02/data-wrangling-cheatsheet.pdf).
-
-## Let's Recap
-
-1. The `dplyr` package is full of [verbs](https://www.youtube.com/watch?v=tcC_Uue7uaQ) that we can use to organize data. Write a question about the flights dataset that could be answered using each of the following functions.
-
-- `arrange()`
-- `filter()`
-- `group_by()`
-- `mutate()`
-- `summarise()`
-
-1. The `ggplot2` package is full of geometries that we can use to display data. Write a question about the flights dataset that could be answered by a plot that uses each of the following geometries.
-
-- `geom_bar()`
-- `geom_hist()`
-- `geom_line()`
-- `geom_point()`
-
 
 
 ## Deliverables
